--- a/Proyecto1/package.json
+++ b/Proyecto1/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node index.js"
   },
   "keywords": [],
   "author": "",
@@ -23,4 +24,6 @@
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1"
   }
+
+  
 }
